syntax = "proto3";

package customer;
option go_package = "pb/customer";

// import "google/protobuf/wrappers.proto";
// import "google/protobuf/timestamp.proto";

message Customer {
  int64 id = 1;
  int64 storeId = 2;
  string firstName = 3;
  string lastName = 4;
  string email = 5;
  string password = 6;
}

message CustomerAccount {
  int64 customerId = 1;
  Address billingAddress = 2;
  repeated Address shippingAddress = 3;
}

message Address {
  string street = 1;
  string city = 2;
  string state = 3;
  string country = 4;
  string postalCode = 5;
  bool isDefault = 6;
}

//
//
//
// Requests & Responses
//

// create customer
message CreateCustomerRequest {
  int64 storeId = 1;
  Customer Customer = 2;
}

message CreateCustomerResponse {
  Customer Customer = 1;
  int64 statusCode = 2;
  string statusMessage = 3;
}

// login
message LoginRequest {
  int64 storeId = 1;
  string email = 2;
  string password = 3;
}

message LoginResponse {
  Customer Customer = 1;
  int64 statusCode = 2;
  string statusMessage = 3;
}

// service client
service CustomerClient {
  rpc CreateCustomer(CreateCustomerRequest) returns (CreateCustomerResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}