syntax = "proto3";

package store;
option go_package = "pb/store";

// import "google/protobuf/wrappers.proto";
// import "google/protobuf/timestamp.proto";

message Store {
  int64 id = 1;
  bool is_default = 2;
  string name = 3;
  string description = 4;
}

message StoreSetting {
  int64 id = 1;
  int64 storeId = 2;
  string seoTitle = 3;
  string seoRobots = 4;
  string metaDescription = 5;
  string metaKeywords = 6;
  string facebook = 7;
  string twitter = 8;
  string instagram = 9;
  string code = 10;
  string defaultCurrency = 11;
  string supportedCurrencies = 12;
  string defaultLocale = 13;
  string supportedLocales = 14;
  int64 defaultCountryId = 15;
  string contactPhone = 16;
  string customerSupportEmail = 17;
  string newOrderNotificationsEmail = 18;
  int64 checkoutZoneId = 19;
}

message StoreAddress {
  int64 id = 1;
  int64 storeId = 2;
  string address = 3;
  string city = 4;
  string stateProvince = 5;
  string postalCode = 6;
  string country = 7;
  string kind = 8;
  bool isDefault = 9;
}

//
//
//
// Requests & Responses
//

// create Store product
message CreateStoreRequest {
  Store store = 1;
}

message CreateStoreResponse {
  Store store = 1;
  int64 statusCode = 2;
  string statusMessage = 3;
}

// get store by id
message GetStoreByIdRequest {
  int64 id = 1;
}

message GetStoreByIdResponse {
  Store store = 1;
  int64 statusCode = 2;
  string statusMessage = 3;
}

// get all stores
message GetAllStoresRequest {}

message GetAllStoresResponse {
  repeated Store stores = 1;
  int64 statusCode = 2;
  string statusMessage = 3;
}

// service client
service StoreClient {
  rpc CreateStore(CreateStoreRequest) returns (CreateStoreResponse);
  rpc GetStoreById(GetStoreByIdRequest) returns (GetStoreByIdResponse);
  rpc GetAllStores(GetAllStoresRequest) returns (GetAllStoresResponse);
}